--- a/assets/scss/layouts/sections/_l-about.scss
+++ b/assets/scss/layouts/sections/_l-about.scss
@@ -25,7 +25,7 @@
     width: 100%;
     height: auto;
     transform: none;
-    z-index: 1;
+    z-index: 0;
   }
 
   &:hover {
@@ -33,7 +33,7 @@
       margin-top: 10px;
       opacity: 1;
       transition: opacity 0.5s;
-      z-index: 2;
+      z-index: 10;
     }
 
     img {
